--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 				<div class="row">
 					<div class="col main_nav_col d-flex flex-row align-items-center justify-content-start">
 						<div class="logo_container">
-							<div class="logo"><a href="#"><img src="images/logo.png" alt="">FLY++</a></div>
+							<div class="logo"><a href="#"><img src="logo.png" alt="">FLY++</a></div>
 						</div>
 						<div class="main_nav_container ml-auto">
 							<ul class="main_nav_list">
@@ -105,7 +105,7 @@
 	<div class="menu trans_500">
 		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
 			<div class="menu_close_container"><div class="menu_close"></div></div>
-			<div class="logo menu_logo"><a href="#"><img src="images/logo.png" alt=""></a></div>
+			<div class="logo menu_logo"><a href="#"><img src="logo.png" alt=""></a></div>
 			<ul>
 				<li class="menu_item"><a href="index.html">home</a></li>
 				<li class="menu_item"><a href="about.html">about us</a></li>
@@ -119,7 +119,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/contact_background.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src=" contact_background.jpg"></div>
 		<div class="home_content">
 			<div class="home_title">contact</div>
 		</div>
@@ -158,7 +158,7 @@
 					<!-- About - Image -->
 
 					<div class="about_image">
-						<img src="images/man.png" alt="">
+						<img src="man.png" alt="">
 					</div>
 
 				</div>
@@ -169,7 +169,7 @@
 
 					<div class="about_content">
 						<div class="logo_container about_logo">
-							<div class="logo"><a href="#"><img src="images/logo.png" alt="">FLY++</a></div>
+							<div class="logo"><a href="#"><img src="logo.png" alt="">FLY++</a></div>
 						</div>
 						<p class="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula iaculis consequat nisl. Nunc et suscipit urna pretium.</p>
 						<ul class="about_social_list">
@@ -190,19 +190,19 @@
 					<div class="about_info">
 						<ul class="contact_info_list">
 							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/placeholder.svg" alt=""></div></div>
+								<div><div class="contact_info_icon"><img src="placeholder.svg" alt=""></div></div>
 								<div class="contact_info_text">601-602, 6TH floor, Emaar, MGF Capital Tower 1, Sikanderpur, Sector-26, Gurugram, Haryana 122002</div>
 							</li>
 							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/phone-call.svg" alt=""></div></div>
+								<div><div class="contact_info_icon"><img src="phone-call.svg" alt=""></div></div>
 								<div class="contact_info_text">2556-808-8613</div>
 							</li>
 							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/message.svg" alt=""></div></div>
+								<div><div class="contact_info_icon"><img src="message.svg" alt=""></div></div>
 								<div class="contact_info_text"><a href="mailto:hello@aionos.ai?Subject=Hello" target="_top">hello@aionos.ai</a></div>
 							</li>
 							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/planet-earth.svg" alt=""></div></div>
+								<div><div class="contact_info_icon"><img src="planet-earth.svg" alt=""></div></div>
 								<div class="contact_info_text"><a href="https://aionos.io/">https://aionos.io/</a></div>
 							</li>
 						</ul>
@@ -235,7 +235,7 @@
 					<div class="footer_col">
 						<div class="footer_content footer_about">
 							<div class="logo_container footer_logo">
-								<div class="logo"><a href="#"><img src="images/logo.png" alt="">FLY++</a></div>
+								<div class="logo"><a href="#"><img src="logo.png" alt="">FLY++</a></div>
 							</div>
 							<p class="footer_about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.</p>
 							<ul class="footer_social_list">
@@ -257,7 +257,7 @@
 							
 							<!-- Footer blog item -->
 							<div class="footer_blog_item clearfix">
-								<div class="footer_blog_image"><img src="images/footer_blog_1.jpg" alt="https://unsplash.com/@avidenov"></div>
+								<div class="footer_blog_image"><img src="footer_blog_1.jpg" alt="https://unsplash.com/@avidenov"></div>
 								<div class="footer_blog_content">
 									<div class="footer_blog_title"><a href="blog.html">Travel with us this year</a></div>
 									<div class="footer_blog_date">Nov 29, 2017</div>
@@ -266,7 +266,7 @@
 							
 							<!-- Footer blog item -->
 							<div class="footer_blog_item clearfix">
-								<div class="footer_blog_image"><img src="images/footer_blog_2.jpg" alt="https://unsplash.com/@deannaritchie"></div>
+								<div class="footer_blog_image"><img src="footer_blog_2.jpg" alt="https://unsplash.com/@deannaritchie"></div>
 								<div class="footer_blog_content">
 									<div class="footer_blog_title"><a href="blog.html">New destinations for you</a></div>
 									<div class="footer_blog_date">Nov 29, 2017</div>
@@ -275,7 +275,7 @@
 
 							<!-- Footer blog item -->
 							<div class="footer_blog_item clearfix">
-								<div class="footer_blog_image"><img src="images/footer_blog_3.jpg" alt="https://unsplash.com/@bergeryap87"></div>
+								<div class="footer_blog_image"><img src=" footer_blog_3.jpg" alt="https://unsplash.com/@bergeryap87"></div>
 								<div class="footer_blog_content">
 									<div class="footer_blog_title"><a href="blog.html">Travel with us this year</a></div>
 									<div class="footer_blog_date">Nov 29, 2017</div>
@@ -312,19 +312,19 @@
 						<div class="footer_content footer_contact">
 							<ul class="contact_info_list">
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/placeholder.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src="placeholder.svg" alt=""></div></div>
 									<div class="contact_info_text">601-602, 6TH floor, Emaar, MGF Capital Tower 1, Sikanderpur, Sector-26, Gurugram, Haryana 122002</div>
 								</li>
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/phone-call.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src="phone-call.svg" alt=""></div></div>
 									<div class="contact_info_text">2556-808-8613</div>
 								</li>
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/message.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src=" message.svg" alt=""></div></div>
 									<div class="contact_info_text"><a href="mailto:hello@aionos.ai?Subject=Hello" target="_top">hello@aionos.ai</a></div>
 								</li>
 								<li class="contact_info_item d-flex flex-row">
-									<div><div class="contact_info_icon"><img src="images/planet-earth.svg" alt=""></div></div>
+									<div><div class="contact_info_icon"><img src=" planet-earth.svg" alt=""></div></div>
 									<div class="contact_info_text"><a href="https://aionos.io/">https://aionos.io/</a></div>
 								</li>
 							</ul>
